agregamos el estado de la variable

--- a/Roles/Bajada_equipos/tasks/main.yml
+++ b/Roles/Bajada_equipos/tasks/main.yml
@@ -7,7 +7,7 @@
     password: "{{ password_ad }}"
     domain_server: "{{ nombre_ad }}"
     ou: "{{ ou }}"
-    enabled: no
+    enabled: "{{ estado }}"
   loop: "{{ pc_desabled }}"
 
   
