--- a/Roles/Bajada_equipos/tasks/main.yml
+++ b/Roles/Bajada_equipos/tasks/main.yml
@@ -1,13 +1,9 @@
 ---
 - name: Bajada de equipos
-  community.windows.win_domain_computer:
-    name: "{{ item }}"
-    dns_hostname: "{{ item }}"  # Agregado: Nombre DNS del equipo
+  microsoft.ad.computer:
+    identity: "{{ item }}"
     user: "{{ user_ad }}"
     password: "{{ password_ad }}"
     domain_server: "{{ nombre_ad }}"
-    ou: "{{ ou }}"
     enabled: "{{ estado }}"
   loop: "{{ pc_desabled }}"
-
-  
